<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.moviedetail.MovieDetailFragment">


    <ScrollView
        android:id="@+id/detailScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/movie_details"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/disney_logo_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/avenir_heavy"
                android:text="@string/movie_specific_details"
                android:textAlignment="center"
                android:textColor="@color/specific_movie_detail_text_color"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/AppcompatButtonAppearance"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/continue_button"
                android:layout_marginVertical="5dp"
                android:text="@string/play"
                app:icon="@drawable/play_icon"
                app:iconGravity="textStart" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/watch_list"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/wacth_list"
                    android:textSize="11sp"
                    android:textColor="@color/hint_text_color"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/ic_group"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="11sp"
                    android:fontFamily="@font/avenir_roman"
                    android:textColor="@color/hint_text_color"
                    android:text="@string/group_watch"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@color/transparent"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="@color/hint_text_color"
                    android:fontFamily="@font/avenir_roman"
                    android:drawableTop="@drawable/ic_download"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textAllCaps="false" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:contentDescription="@string/accept_and_continue"
                app:tabIndicator="@color/blue_00"
                app:tabMode="auto"
                app:tabSelectedTextColor="@color/white" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"

                android:layout_height="1dp"
                android:background="@color/line_color" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>