<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.signin.password.SignInPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/disney_logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/disney_plus_with_line_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enter_your_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/enter_your_password"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/disney_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/input_field_hint_color"
        app:boxBackgroundColor="@color/input_field_background"
        app:boxStrokeColor="@color/input_field_hint_color"
        app:hintTextColor="@color/input_field_hint_color"
        app:layout_constraintTop_toBottomOf="@id/enter_your_password_text"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/icon_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_text_input_rule_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/password_field_rule"
        android:textColor="@color/input_field_hint_color"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/avenir_heavy"
        android:letterSpacing="0.2"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_rule_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textColor="@color/text_color_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_button" />

</androidx.constraintlayout.widget.ConstraintLayout>