<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.register.CreatePasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/step_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stepThirdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stepThree"
            android:textColor="@color/step_text"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="17dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/step_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/avenir_heavy"
        android:textSize="@dimen/password_text_size"
        android:textColor="@color/email_text"
        android:text="@string/create_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edittext"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/create_password"
        app:helperText="@string/help_text"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/edittext_color"
        app:hintTextColor="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPasswordEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/information_color"
            android:textCursorDrawable="@color/email_text"
            android:inputType="textPassword"
            android:background="@color/edittext_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext">

        <View
            android:id="@+id/lineView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:background="@color/line_color" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/infoSignText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/for_sign_text"
                android:textColor="@color/for_sign_color"
                android:textSize="@dimen/advice_text_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman"
                tools:text="@string/example_email"
                android:textColor="@color/email_text"
                android:textSize="@dimen/email_text_size" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuePasword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:text="@string/continue_button"
        android:textColor="@color/email_text"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>